add 添加 help 命令 add 添加 ping 命令 update 完善命令类型

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.10",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "getopts": "^2.3.0",
     "pinia": "^2.0.14",
