--- a/server/.gitignore
+++ b/server/.gitignore
@@ -9,6 +9,9 @@ lerna-debug.log*
 # private
 config.prod.js
 
+# build
+归档.zip
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
