--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
     "NeteaseCloudMusicApi": "^4.6.7",
     "axios": "^0.27.2",
     "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.10",
     "connect-redis": "^6.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
@@ -23,9 +22,7 @@
     "nodemailer": "^6.6.0",
     "random-string": "^0.2.0",
     "redis": "^3.0.2",
-    "sequelize": "^6.21.3",
-    "socket.io": "^4.5.0",
-    "xss": "^1.0.10"
+    "sequelize": "^6.21.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
