--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev:crx": "cross-env BUILD_CRX=1 vite build --watch",
     "build": "vue-tsc --noEmit && vite build",
+    "build:crx": "cross-env BUILD_CRX=1 vite build",
     "preview": "vite preview",
     "tsc": "vue-tsc --noEmit"
   },
@@ -25,9 +27,13 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "@types/node": "^18.6.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "consola": "^2.15.3",
+    "cross-env": "^7.0.3",
+    "crx": "^5.0.1",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -36,6 +42,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.7.1",
+    "npm-run-all": "^4.1.5",
+    "ora": "5",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "unplugin-vue-components": "^0.21.1",
